examples/errors/04_bad_function_params/bad_function_params.txy
fn min(a, b: int): int
    if a < b then return a;
    else return b;
    endif;
endfn;

proc main()
    println(string(min(1, 2.5f)));
endproc;